css: fix overlap

--- a/css/default.scss
+++ b/css/default.scss
@@ -116,7 +116,6 @@ ul.contents {
 
   #content {
     padding: 5px;
-
   }
 }
 
@@ -189,7 +188,7 @@ ul.contents {
   }
 
   #posts {
-    width: 79%;
+    width: 76%;
     float: left;
 
     .post {
